1.21.1 init